--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -24,11 +24,17 @@ tasks:
       
       # 3. Build and publish
       - mise x -- zig build
-      - mise x -- gh release create v{{.VERSION}} ./zig-out/bin/StayAwake-windows-x86_64.exe --generate-notes
+      - 'mise x -- gh release create v{{.VERSION}} ./zig-out/bin/StayAwake-windows-x86_64.exe -title "v{{.VERSION}}: $(cat release_title.txt)" --notes-file release_notes.md'
+      - rm release_title.txt release_notes.md
+      - echo "🚀 Release v{{.VERSION}} successfully published!"
     preconditions:
       - sh: 'test -n "{{.VERSION}}"'
         msg: "Error: VERSION variable is missing. Example: task release VERSION=1.2.0"
       - sh: "mise x -- gh auth status"
         msg: "Error: You must be logged into the GitHub CLI (gh auth login)."
+      - sh: "test -f release_title.txt"
+        msg: "Error: 'release_title.txt' missing."
+      - sh: "test -f release_notes.md"
+        msg: "Error: 'release_notes.md' missing."
       - sh: "git diff --exit-code"
         msg: "Error: You have uncommitted changes. Please stash or commit them first."
