refactor: Standardize code style and enhance build system
Apply comprehensive code style rules using clang-format and clang-tidy.
- Rename global variables to remove the 'g_' prefix.
- Convert function names to camelBack case.
- Configure clang-format for C language, including pointer alignment, brace style, and integer literal separators.
- Overhaul clang-tidy checks, enabling 'cert-*' and making all warnings errors.
- Implement detailed identifier naming conventions (camelBack for functions/variables, CamelCase for types, UPPER_CASE for constants).
Integrate CMake for dedicated analysis builds.
Update Zig build to C23 standard with -Wall and -Wextra compiler warnings.
Add compile_flagz for generating IDE-friendly compile_flags.txt.
Introduce a 'check' task in Taskfile.yml for linting and formatting.
Use safer C standard library functions (e.g., _wfopen_s, fwscanf_s, swprintf_s).
Update mise.toml with CMake and Ninja.
Adjust .gitignore to include new build directories.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ zig-out/
 *.iml
 *.ipr
 
+cmake-build/
 cmake-build-*/
 .idea/workspace.xml
 .idea/tasks.xml
@@ -48,3 +49,4 @@ cmake-build-*/
 .idea/remote-targets.xml
 
 /node_modules/
+/.task/
