style(formatting): Configure clang-format for consistent include ordering
Introduces IncludeCategories to define a specific order for header files, prioritizing Windows API headers, then other system headers, and finally project-specific headers.
Enables regrouping of include blocks and sets a maximum of one empty line to keep.
Updates the lint task to re-run when .clang-format files change, ensuring consistent application of these rules.
Source files are reordered to conform to the new include sorting rules.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,7 @@ tasks:
       - mise x -- clang-tidy src/*.[ch]
     sources:
       - src/*
+      - .clang-*
         
   build:
     desc: Build StayAwake
